src/scss/sections/usp.scss
.s-usp .usp {
  background: $color-brand-seashell;

  &__columns {
    @include tablet {
      align-items: center;
    }
  }
  &__item {
    @include tablet {
      display: flex;
      align-items: center;
    }
    @include mobile {
      text-align: center;
    }    
    
    &-image {
      min-width: 45px;
      width: 45px;
      height: 45px;
      object-fit: contain;

      @include mobile {
        margin-left: auto;
        margin-right: auto;
      }      
    }

    &-title {
      font-weight: 700;
      font-size: 14px;
      line-height: 150%;
      letter-spacing: -0.01em;
      text-transform: uppercase;



      @include tablet {
        padding-left: 24px;
        padding-right: 33px;
      }
  
      em {
        color: $primary;
        font-style: inherit;
      }
    }
  }
}

